pokedex card and favicon

--- a/src/app/social-media/social-media.component.scss
+++ b/src/app/social-media/social-media.component.scss
@@ -1,6 +1,7 @@
 .container-social-media {
     position: absolute;
     right: 35px;
+    z-index: 1;
     
     .spacing-social-media {
         margin-top: 25px;
