--- a/src/app/job-cards/job-cards.component.html
+++ b/src/app/job-cards/job-cards.component.html
@@ -4,7 +4,7 @@
         <div fxLayout="row wrap" fxLayoutAlign="center center" fxLayoutGap="40px grid" fxLayoutGap.sm="20px grid" fxLayoutGap.xs="0">
             <div *ngFor="let project of projects" fxFlex="25" fxFlex.md="33" fxFlex.sm="45" fxFlex.xs="100" fxLayout="column" class="card">
                 <div fxLayout="column" class="img-container">
-                    <img src="assets/images/rga-1.PNG" [alt]="project.name" class="img-card">
+                    <img [src]="project.img" [alt]="project.name" class="img-card">
                     <div class="languages">
                         <span class="span-languages">Lenguajes Utilizados:</span>
                         <div fxLayoutAlign="center center">
