--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -16,16 +16,16 @@
         </div>
 
         <div fxLayout="column" fxLayoutAlign="center end" class="position-span-right">
-            <div fxLayoutAlign="space-between center">
+            <!-- <div fxLayoutAlign="space-between center">
                 <span class="span-title">2007-2016.</span>
                 <span class="span-title">U.E.P Colegio La Chinita</span>
             </div>
 
             <div fxLayoutAlign="end center">
                 <span class="span-description">Educación básica y media general</span>
-            </div>
+            </div> -->
 
-            <div class="urbe-flex-long" [style.marginTop.px]="20">
+            <div class="urbe-flex-long">
                 <span class="span-title">2016-2020.</span>
                 <span class="span-title">Universidad Dr. Rafael Belloso Chacín</span>
             </div>
@@ -54,7 +54,25 @@
             </div>
 
             <div fxLayoutAlign="end center">
-                <span class="span-description">Curso de Angular</span>
+                <span class="span-description">Curso de Fundamentos de Angular</span>
+            </div>
+
+            <div fxLayoutAlign="space-between center" [style.marginTop.px]="20">
+                <span class="span-title">Mar 2020.</span>
+                <span class="span-title">Platzi</span>
+            </div>
+
+            <div fxLayoutAlign="end center">
+                <span class="span-description">Curso de Angular: Componentes y Servicios!</span>
+            </div>
+
+            <div fxLayoutAlign="space-between center" [style.marginTop.px]="20">
+                <span class="span-title">Feb 2023.</span>
+                <span class="span-title">Udemy</span>
+            </div>
+
+            <div fxLayoutAlign="end center">
+                <span class="span-description">Flutter: Tu guía completa para IOS y Android</span>
             </div>
         </div>
 
@@ -67,11 +85,19 @@
 
         <div fxLayout="column" fxLayoutAlign="center end" class="position-span-right">
             <div fxLayoutAlign="end center">
-                <span class="span-title">HTML</span>
+                <span class="span-title">Angular</span>
             </div>
 
             <div fxLayoutAlign="end center">
-                <span class="span-title">CSS</span>
+                <span class="span-title">React</span>
+            </div>
+
+            <div fxLayoutAlign="end center">
+                <span class="span-title">Git</span>
+            </div>
+
+            <div fxLayoutAlign="end center">
+                <span class="span-title">Flutter</span>
             </div>
 
             <div fxLayoutAlign="end center">
@@ -79,15 +105,19 @@
             </div>
 
             <div fxLayoutAlign="end center">
-                <span class="span-title">Angular</span>
+                <span class="span-title">Typescript</span>
             </div>
 
             <div fxLayoutAlign="end center">
-                <span class="span-title">Vue</span>
+                <span class="span-title">HTML</span>
+            </div>
+
+            <div fxLayoutAlign="end center">
+                <span class="span-title">CSS</span>
             </div>
 
             <div fxLayoutAlign="end center" class="margin-bottom-git">
-                <span class="span-title">Git</span>
+                <span class="span-title">Firebase</span>
             </div>
         </div>
     </div>
@@ -109,16 +139,43 @@
             </div>
 
             <div fxLayoutAlign="start center" fxLayoutAlign.sm="end center" fxLayoutAlign.xs="end center">
-                <span class="span-description">Desarrollador frontend</span>
+                <span class="span-description">Desarrollador Front-end</span>
             </div>
 
-            <div fxLayoutAlign="space-between center" [style.marginTop.px]="19">
+            <div fxLayoutAlign="space-between center" [style.marginTop.px]="20">
                 <span class="span-title">Intelenz</span>
-                <span class="span-title">Mar 2020 - Ene 2021.</span>
+                <span class="span-title">Mar 2020 - Sep 2021.</span>
             </div>
 
             <div fxLayoutAlign="start center" fxLayoutAlign.sm="end center" fxLayoutAlign.xs="end center">
-                <span class="span-description">Desarrollador frontend Angular</span>
+                <span class="span-description">Desarrollador Front-end</span>
+            </div>
+
+            <div fxLayoutAlign="space-between center" [style.marginTop.px]="20">
+                <span class="span-title">a2Softway</span>
+                <span class="span-title">Mar 2021 - Abr 2021.</span>
+            </div>
+
+            <div fxLayoutAlign="start center" fxLayoutAlign.sm="end center" fxLayoutAlign.xs="end center">
+                <span class="span-description">Desarrollador Front-end</span>
+            </div>
+
+            <div fxLayoutAlign="space-between center" [style.marginTop.px]="20">
+                <span class="span-title">Freelance</span>
+                <span class="span-title">Oct 2021 - Abr 2022.</span>
+            </div>
+
+            <div fxLayoutAlign="start center" fxLayoutAlign.sm="end center" fxLayoutAlign.xs="end center">
+                <span class="span-description">Desarrollador Front-end</span>
+            </div>
+
+            <div fxLayoutAlign="space-between center" [style.marginTop.px]="20">
+                <span class="span-title">QUIK</span>
+                <span class="span-title">May 2022 - Actualidad</span>
+            </div>
+
+            <div fxLayoutAlign="start center" fxLayoutAlign.sm="end center" fxLayoutAlign.xs="end center">
+                <span class="span-description">Desarrollador Full Stack</span>
             </div>
         </div>
 
